修改团队介绍

--- a/html/team.html
+++ b/html/team.html
@@ -7,7 +7,7 @@
     <div id="app">
         <div class="teamheader">
             <div class="teamTitle">专业团队</div>
-            <div class="teamcontent">作为专业的综合性软装作为专业的综合性软装星作为专业的综合性软装星作为专业的综合性软装星作为专业的综合性软装星星</div>
+            <div class="teamcontent" v-html="describ"></div>
         </div>
         <div class="menberBox" v-for="(item,index) in menberList" @click="to_menberInfo(index)">
             <div class="menberList">
@@ -42,38 +42,74 @@
         //加载更多
         let loadMore = (that) => {
             //console.log(1111);
-                new Promise((resolve, reject) => {
-                    $.ajax({
-                        url: baseUrl + '/staff/getStaffById',
-                        dataType: 'json',
-                        method: 'get',
-                        success: function (res) {
-                            console.log(res);
-                            that.menberList = [];
-                            that.menberList.push(...res.result);
-                            resolve(1);
-                        }
-                    })
-                }).then( ()=> {
-                    let school = document.getElementsByClassName('school');
-                    for (let i in that.menberList) {
-                        school[i].innerHTML = that.menberList[i].description;
+            new Promise((resolve, reject) => {
+                $.ajax({
+                    url: baseUrl + '/staff/getStaffById',
+                    dataType: 'json',
+                    method: 'get',
+                    success: function (res) {
+                        console.log(res);
+                        that.menberList = [];
+                        that.menberList.push(...res.result);
+                        resolve(1);
                     }
-
                 })
+            }).then(() => {
+                let school = document.getElementsByClassName('school');
+                for (let i in that.menberList) {
+                    school[i].innerHTML = that.menberList[i].description;
+                }
+
+            })
         }
         var app = new Vue({
             el: '#app',
             data: {
-                menberList: []
+                menberList: [],
+                describ: ''
             },
             methods: {
-                to_menberInfo:function(index) {
-                    window.location.href = './menberInfo.html?id='+this.menberList[index].id;
+                to_menberInfo: function (index) {
+                    window.location.href = './menberInfo.html?id=' + this.menberList[index].id;
                 }
             },
             beforeCreate: function () {
-                upload(this,loadMore);
+                let that = this;
+                //通过栏目ID得到栏目详细信息
+                let id;
+
+                let loadTitle = (id) => {
+                $.ajax({
+                        url: baseUrl + '/column/getColumnById/' + id,
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            //console.log(res.result.description);
+                            that.describ = res.result.description;
+                        }
+                    })
+                }
+                if (sessionStorage.getItem('resFooter')) {
+                    let resFooter = sessionStorage.getItem('resFooter');
+                    resFooter = JSON.parse(resFooter);
+                    //console.log(resFooter);
+                    id = resFooter[1].columnId;
+                    //console.log(id);
+                    loadTitle(id);
+                } else {
+                    $.ajax({
+                        url: baseUrl + '/siteInfo',
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            //console.log(res.h5Footer[1].columnId);
+                            id = res.h5Footer[1].columnId;
+                            loadTitle(id)
+                        }
+                    })
+                }
+
+                upload(this, loadMore);
                 loadMore(this);
             }
         })
