--- a/html/menberInfo.html
+++ b/html/menberInfo.html
@@ -54,7 +54,8 @@
                             id: id
                         },
                         success: function (res) {
-                            console.log(res);
+                            //console.log(res);
+                            res.result = errorimg(res.result);
                             that.menberInfo = res.result[0];
                             resolve(1);
                         }
